<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mperfilh"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/miperfil" />
        <item
            android:id="@+id/baresh"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/bares" />
        <item
            android:id="@+id/sitiosh"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/sitios" />
        <item
            android:id="@+id/hotelesh"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/hoteles" />
    </group>

    <item android:title="@string/masopciones">
        <menu>
            <item
                android:id="@+id/restaurantesh"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/restaurantes" />
            <item
                android:id="@+id/cerrarh"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/cerrar" />
        </menu>
    </item>

</menu>
