<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juandaqugo.elsantuario.Hotel3Fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/ttexto3fraghotel"
        android:text="@string/ruta60"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/imagenruta60"
        android:src="@drawable/ruta60"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/tdescr3fraghotel"
        android:text="@string/ruta60descr"
        android:textSize="20sp"
        android:textColor="@color/blue"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/mapa"
        android:gravity="center"
        android:id="@+id/Bhotelruta60"
        android:background="@color/darkviolet"
        android:textColor="@color/black"/>

</LinearLayout>
