<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juandaqugo.elsantuario.Sitio2Fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/ttexto2fragsitio"
        android:text="@string/museom"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/imagenmontecristo"
        android:src="@drawable/montecristo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/tdescr2fragsitio"
        android:text="@string/museomdescr"
        android:textSize="20sp"
        android:textColor="@color/blue"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/mapa"
        android:gravity="center"
        android:id="@+id/Bmontecristo"
        android:background="@color/darkviolet"
        android:textColor="@color/black"/>

</LinearLayout>
