<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juandaqugo.elsantuario.Sitio3Fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/ttexto3fragsitio"
        android:text="@string/ceramica"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/imagenceramica"
        android:src="@drawable/laceramicaelsantuario"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/tdescr3fragsitio"
        android:text="@string/ceramicadescr"
        android:textSize="17sp"
        android:textColor="@color/blue"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/mapa"
        android:gravity="center"
        android:id="@+id/Bceramica"
        android:background="@color/darkviolet"
        android:textColor="@color/black"/>

</LinearLayout>
